[package]
name = "authy"
version = "0.9.1"
authors = ["Lori Holden <noreply@loriholden.com>"]
description = "Bindings for the Authy two factor web service."

documentation = "https://docs.rs/authy/"
repository = "https://github.com/lholden/authy-rs"

license = "MIT"

readme = "README.md"

keywords = ["authy", "2FA", "two", "factor", "bindings"]
categories = ["authentication", "web-programming::http-client"]

[dependencies]
reqwest = "0.4"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
